s2i/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-test-app
spec:
  finalizers:
  - kubernetes
