s2i/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: petclinic-dev-app
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: petclinic-dev-app
    app.kubernetes.io/name: petclinic-dev-app
    app.kubernetes.io/part-of: petclinic-dev-app
    app.openshift.io/runtime: java
  name: petclinic-dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-dev-app
  template:
    metadata:
      labels:
        app: petclinic-dev-app
      annotations:
        revision: "gitopsdevpush"
        buildDate: "20220517100030"
    spec:
      containers:
      - name: petclinic-dev-app
        imagePullPolicy: Always
        image: quay.io/swaraolaxmi698/petclinic-dev-app-repo:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
