s2i/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-petclinic-s2i
  name: spring-petclinic-s2i
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: spring-petclinic-s2i
    weight: 100
